【comments】 add spring cloud gateway component

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>seata-account</module>
         <module>seata-storage</module>
         <module>seata-common</module>
+        <module>seata-gateway</module>
     </modules>
 
     <!--统一管理jar包和版本-->
